# poker

./: .gitignore  README.md
01-world-to-state/: README.md
02-ocr-that-plays/: README.md
03-display-ui/: README.md
04-decision-engine/: API.md
04-decision-engine/backend/: README.md  pyproject.toml
04-decision-engine/backend/app/: main.py  schemas.py  solver_decisionholdem.py  solver_heuristic.py
04-decision-engine/backend/tests/: test_api.py
04-decision-engine/demo/: .gitignore  detect_cards.py  pyproject.toml  server.py  swap_to_yolov8m.py
04-decision-engine/demo/static/: index.html
04-decision-engine/scripts/: poker.sh
PokerVision/: Info.plist  PokerVisionApp.swift
PokerVision.xcodeproj/: project.pbxproj
PokerVision/Agent/: AgentSession.swift  AgentSpeech.swift  GoogleAuthManager.swift  HandGestureDetectors.swift
PokerVision/Cube/: CubeController.swift  CubeScene.swift  CubeState.swift  TransformSmoother.swift
PokerVision/DisplayUI/: DisplayHUDModels.swift  PokerDisplayRenderer.swift
PokerVision/HandTracking/: HandTrackingService.swift
PokerVision/PokerCore/: PokerOddsTrainer.swift  PokerTrainingModels.swift
PokerVision/Video/: MetaGlassesVideoProvider.swift  PhoneCameraVideoProvider.swift  VideoFrameProvider.swift  VideoSourceCoordinator.swift
PokerVision/ViewModels/: PokerDisplayViewModel.swift  PokerVisionViewModel.swift  StreamSessionViewModel.swift  (+1 more)
PokerVisionTests/: CameraAccessTests.swift
PokerVisionUITests/: CameraAccessUITests.swift
docs/: pipeline.md
webcam-prototype/: README.md  download_model.py  requirements.txt
(+22 files in other folders)
