[project]
name = "poker-solver-backend"
version = "0.1.0"
description = "HTTP wrapper around DecisionHoldem implementing contracts/API.md v1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-ulid>=3.0",
    "treys>=0.1.8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.uv]
package = false
