[project]
name = "poker-demo"
version = "0.1.0"
description = "Local browser demo: webcam → YOLO card detection → AWS solver"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "numpy>=1.26,<2.3",
    "opencv-python-headless>=4.9",
    "torch>=2.2,<2.6",
    "torchvision>=0.17",
    "ultralytics>=8.3",
    "pandas>=2.0",
    "seaborn>=0.13",
    "requests>=2.31",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "psutil>=5.9",
    "pillow>=10",
    "pyyaml>=6.0",
    "scipy>=1.11",
]

[tool.uv]
package = false
